Small error fix

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 
     <!-- Create handover report -->
 
-    <div id="id03" class="w3-modal" style="padding: 0; display: block !important;">
+    <div id="id03" class="w3-modal" style="padding: 0">
         <div class="w3-modal-content w3-card-4" style="width: 100%; height: 100%">
 
             <header class="w3-container w3-round-xlarge w3-padding-large">
