--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                 <div class="w3-container" style="height: 50%">
                     <div class="w3-ios-background w3-round-xlarge"
                          style="padding:10px; position: relative; z-index: 1">
-                        <div class="w3-margin w3-center" style="padding-top: 10%; padding-bottom: 2%">
-                            <h3> Select a patient from your list </h3>
+                        <div class="w3-margin w3-center" style="padding-top: 1%; padding-bottom: 2%">
+                            <span id="nurse-img"><i class="fa-solid fa-user-nurse fa-5x"></i></span>
+                            <h3>Select a patient from your list </h3>
                             <p>This list is automatically synchronized with Cerner.</p>
                             <div id="select-patient" class="w3-dropdown-hover w3-center">
                                 <button class="w3-padding-medium w3-button" style="width: 350px">
